--- a/Calculator/Main.storyboard
+++ b/Calculator/Main.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="32" translatesAutoresizingMaskIntoConstraints="NO" id="JpY-5Q-v2W">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="32" translatesAutoresizingMaskIntoConstraints="NO" id="JpY-5Q-v2W" customClass="RoundedLabel" customModule="Calculator" customModuleProvider="target">
                                 <rect key="frame" x="20" y="103" width="560" height="66"/>
                                 <color key="backgroundColor" red="0.74501439140000003" green="0.8559570312" blue="0.82259971220000005" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -29,7 +29,7 @@
                                 <nil key="highlightedColor"/>
                                 <size key="shadowOffset" width="0.0" height="0.0"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tk9-uL-Lw4">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tk9-uL-Lw4" customClass="RoundedView" customModule="Calculator" customModuleProvider="target">
                                 <rect key="frame" x="20" y="177" width="560" height="403"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="TzU-V2-VtQ" customClass="RoundedButton" customModule="Calculator" customModuleProvider="target">
@@ -445,7 +445,7 @@
                                     <constraint firstAttribute="bottom" secondItem="ghv-xd-phC" secondAttribute="bottom" constant="8" id="zc4-zq-kVt"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="right" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="8cZ-BK-D5e">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="right" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="8cZ-BK-D5e" customClass="RoundedLabel" customModule="Calculator" customModuleProvider="target">
                                 <rect key="frame" x="20" y="72" width="560" height="23"/>
                                 <color key="backgroundColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -472,8 +472,8 @@
                     </view>
                     <navigationItem key="navigationItem" title="Calculator" id="ZDM-Z6-sNW"/>
                     <connections>
-                        <outlet property="display" destination="JpY-5Q-v2W" id="bRV-Do-JcD"/>
-                        <outlet property="historyDisplay" destination="8cZ-BK-D5e" id="cjl-Wb-hWR"/>
+                        <outlet property="displayLabel" destination="JpY-5Q-v2W" id="9hn-KP-HES"/>
+                        <outlet property="historyDisplayLabel" destination="8cZ-BK-D5e" id="Ewq-7w-eTc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
